test/trivial/bradc/localConfig.good
localConfig.chpl:4: error: Configuration variables only allowed at module scope.
localConfig.chpl:7: error: Configuration variables only allowed at module scope.
